lang/tests/compile_fail/tail_not_last.rs
use quasar_lang::prelude::*;

solana_address::declare_id!("11111111111111111111111111111112");

#[account(discriminator = [1])]
pub struct BadTail<'a> {
    pub name: &'a str,
    pub value: u64,
}

fn main() {}
